--- a/itwork.html
+++ b/itwork.html
@@ -121,7 +121,7 @@
                     <p>An IT professional works mostly with software development. This includes both the coding aspect, as well as all aspects of management. This includes project planning and timelines, testing, quality control, and other administrative tasks.</p>
                     <p>IT professionals mostly interact with  other IT professionals and developers. In cases where an IT professional is running a company or perhaps a manager, then they will also come in contact with clients and investors. In most cases, they will interact with software architects, designers, UI and UX designers.</p>
                     <p>In big corporations depending on the specific role, IT professionals interact with different people. For instance, someone in the sales team will interact with a lot more clients. Someone in the business team will interact with multiple individuals, such as developers, stakeholders of the project, managers and so on.</p>
-                    <p>IT professionals spend most of their time with the development aspects itself. This includes coding, testing, deployment, and so on./p>
+                    <p>IT professionals spend most of their time with the development aspects itself. This includes coding, testing, deployment, and so on.</p>
                     <p>For most IT professionals, coming up with a tool that is exactly how it is envisioned by the designer is the most challenging part. Usually there are some software issues and mismatches that may take a long time to fix.</p>
 
                </div>
