--- a/project.html
+++ b/project.html
@@ -117,10 +117,10 @@
                                    <div class="tab-pane-item">
                                         <h2>Description</h2>
                                         <p>By building the application, I would like to achieve the following.</p>
-                                        <p>1. Geographic mapping of crops that are cultivated in a province. This will enable the clear transparency of following data</p>
+                                        <p>1. Geographic mapping of crops that are cultivated in a province. This will enable the clear transparency of following data.</p>
                                         <p>a. When is the harvest expected for sale?</p>
                                         <p>b. How much volume of crops is expected from each province?</p>
-                                        <p>2. Buyers, Food processing companies can understand the supply and demand better</p>
+                                        <p>2. Buyers, Food processing companies can understand the supply and demand better.</p>
                                         <p>3. Will help farmers to do crop planning based on scientific crop & soil management processes.</p>
                                         <p>4. Complete logistics, recyclable packaging and cold storage blocking to ensure optimal resource utilization.</p>
                                         <h4>Concept:</h4>
@@ -152,7 +152,7 @@
                                         <h2>Skills required</h2>
                                         <p>To accomplish the output, following are the skills required.</p>
                                         <p>1. Business Requirements understanding: this skill will help you to understand the problem statement into an IT requirement.</p>
-                                        <p>2.  Technical solution writing – With this competency, you will be in a position to understand the business requirement document, by splitting the whole problem up into small fragments, it can be analyzed very easily and This will  give a schematic overview and a rough understanding of how the solution should be built up from scratch and what kind of technology has to be used to make this solution work.</p>
+                                        <p>2. Technical solution writing – With this competency, you will be in a position to understand the business requirement document, by splitting the whole problem up into small fragments, it can be analyzed very easily and This will  give a schematic overview and a rough understanding of how the solution should be built up from scratch and what kind of technology has to be used to make this solution work.</p>
                                         <p>3. IT Application Design, Coding, TestingDebugging: It’s a part of the overall IT application development process.</p>
                                    </div>
 
@@ -172,6 +172,7 @@
                                         <p>Artificial intelligence is a simulation of human intelligence in machines that are typically programmed to think like humans. Does artificial intelligence look like a new technology? It originated in the year of 1950 and it's now picking up its importance due to the advancement in the computing power of the hardware. </p>
                                         <p>It is based on highly complex mathematical models combined with systematic problem-solving. artificial intelligence has a wide variety of applications starting from Medical, Aerospace, Agriculture  and virtual office assistant.</p>
                                         <p>Few examples of artificial intelligence are, computer playing chess, autonomous cars, smart banking application and when there is a fraudulent transaction via a credit card, the artificial intelligence powered software recognizes this transaction based on various parameters like location of the car, the spending pattern under regular point of sale etc.</p>
+                                        <p>Autonomous driving technology imports data from the car sensor, it has to make a decision whether to apply brakes or not during auto mode and these decisions are highly dependent on the previously stored information. For the successful implementation of this task, machine learning and the decision-making matrix are used.</p>
                                         <p>In the case of my software, artificial intelligence is used in smart forecasting, Making for the demand-supply of food crops based on climatic and external factors in cultivation.</p>
                                         <p>This will not only support PC softwares, but also the mobile applications in which the farmers who are having poor literacy rates, can talk and record the contents in a very smart way. Their speech will be processed through various algorithms and complex systems specifically designed for this allocated task ,and eventually it will be converted into text format with the help of AI engines. Furthermore utilizing machine learning techniques, these data will be fed into the system for long terms. Therefore we can improve the handy user experience to the end-user.</p>
                                         <p>In all of the artificial intelligence applications, unlike Hollywood movies, we would not be seeing robots taking control of cities, machines starting to rule the human race because it is purely a highly-capable application which can process huge amounts of data and has the capability to learn from its past experience since it's a combination of the neural network, deep learning, natural language processing, cognitive computing, and machine learning.</p>
@@ -223,7 +224,7 @@
                                         <p>Cloud computing can be divided into two categories.</p>
                                         <p>1. Deployment model</p>
                                         <p>2. Service model</p>
-                                        <p>Deployment model. It has been categorized into 3 subdivisions</p>
+                                        <p>Deployment model, It has been categorized into 3 subdivisions</p>
                                         <p>1. Public cloud</p>
                                         <p>2. Private cloud</p>
                                         <p>3. Hybrid cloud</p>
@@ -246,7 +247,6 @@
                                         <h4>What is the likely impact?</h4>
                                         <p>The Cloud computing market has been growing rapidly and now more than 62% of CRM software are cloud-based. The growth rate has reached 22.8% and will exceed $127.5Due to the arrival of cloud storage, on-premise infrastructures are slowly moving to the brink of extinction phase because most of the organizations already started to switch to cloud computing from using physical data servers. Most of the time, small companies and startups are facing a lot of serious issues in using physical data centers. They are very expensive and less scalable, not like virtual data centers, they require a considerable amount of space to install the whole infrastructure, furthermore, it is essential to appoint a team to manage hardware and software maintenance but in cloud computing, most of the services will be given by the service providers like AZURE, AWS, or another one. Even Though their service might vary from one to another, most of the features resemble each other.</p>
                                         <p>The next most important part of handling data is security. Nowadays, it is being a cakewalk for hackers to do phishing, trojan injection, and other kinds of hacking. Here it requires a staunch firewall and vulnerability testing systems. Comparatively using cloud systems is safer than using physical data storage devices or servers because investors have invested a bajillion dollars in cloud computing systems. In our case, data security and privacy are very important. We should be loyal and trustworthy to our customers in keeping their private data safe. Then only we can retain them into our ecosystem. Furthermore, as our initial investment is going to be a very small amount, we will be limited in all types of resources. So, the best way is to move to cloud storage systems. It can be fast, efficient and persons from all over the world can collaborate and access the data over the internet.</p>
-                                        <p>Fig.3. Neota Logic, ‘Artificial Intelligence’,Screenshot, viewed on 15 December 2020, (https://blogs.thomsonreuters.com/answerson/artificial-intelligence-legal-practice/).</p>
                                    
                                    </div>
  
